--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     <div class="container" style="position: relative; z-index: 1; max-width: 1200px; margin: auto;">
         <h2 class="text-center" style="font-size: 3.5rem; color: #ff9800; margin-bottom: 30px; text-transform: uppercase; font-weight: bold; letter-spacing: 3px; opacity: 0; animation: fadeIn 1s forwards 0.5s;">About Me</h2>
         <p class="lead" style="font-size: 1.5rem; color: #f4f4f4; margin-bottom: 40px; opacity: 0; animation: fadeIn 1s forwards 1s; font-style: italic;">
-            Hi! I'm Sydney D. Jimenez, a 3rd-year BS Information Technology student at New Era University. I'm passionate about
+            Hi! I'm Sydney D. Jimenez, a 4th-year BS Information Technology student at New Era University. I'm passionate about
             coding and designing, and I believe in the power of technology to solve real-world problems. With a love for learning and
             growing, I'm constantly honing my skills to stay ahead in the ever-evolving world of tech.
         </p>
